[package]
name = "zcash-wallet-sdk-poc"
version = "0.0.1"
authors = ["Kevin Gorham <kevin.gorham@z.cash>"]
description = "Simple PoC that rust can work with protobufs over JNI"
publish = false

[dependencies]
failure = "0.1"
rand = "0.4"
rusqlite = { version = "0.15", features = ["bundled"] }
log = "0.4"

[dependencies.ff]
git = "https://github.com/str4d/librustzcash.git"
rev = "348bf8ce6f371566c15ff83a6fb5857f876278a8"

[dependencies.pairing]
git = "https://github.com/str4d/librustzcash.git"
rev = "348bf8ce6f371566c15ff83a6fb5857f876278a8"

[dependencies.sapling-crypto]
git = "https://github.com/str4d/librustzcash.git"
rev = "348bf8ce6f371566c15ff83a6fb5857f876278a8"

[dependencies.zcash_client_backend]
git = "https://github.com/str4d/librustzcash.git"
rev = "348bf8ce6f371566c15ff83a6fb5857f876278a8"

[dependencies.zcash_primitives]
git = "https://github.com/str4d/librustzcash.git"
rev = "348bf8ce6f371566c15ff83a6fb5857f876278a8"

[dependencies.zip32]
git = "https://github.com/str4d/librustzcash.git"
rev = "348bf8ce6f371566c15ff83a6fb5857f876278a8"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.10", default-features = false }
android_logger = "0.6"
log-panics = "2.0.0"

[lib]
name = "zcashwalletsdk"
path = "src/main/rust/lib.rs"
crate-type = ["staticlib", "cdylib"]
